add more fields to company and project
