# server/restify/lib/model/company.js
@@ -15,15 +15,25 @@ module.exports = {
         name: { type: String, required: true },
         alias: { type: String, required: true },
         slogan: String,
+        description: String,
         /**
-         * Alive
+         * Attibute
          */
-        active: Boolean
+        active: Boolean,
+        rating: { type: Number, max: 5 },
+        /**
+         * Populate
+         */
+        startYear: Number,
+        revenueTotal: Number,
+        projectCount: Number,
+
     },
     options: {
         collection: 'company',
         versionKey: false,
-        timestamps: {}
+        timestamps: {},
+        runValidators: false
     },
     methods: {},
     indexes: {},
